--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -2,6 +2,7 @@
 <html lang="en"
       xmlns:th="http://thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorate="layout1"  >
 <head>
     <meta charset="UTF-8">
@@ -10,7 +11,7 @@
 </head>
 <body>
 <div class="p-3" layout:fragment="content1">
-    <div class="p-3">
+    <div class="p-3" sec:authorize="hasRole('ADMIN')">
         <a class="btn btn-primary" th:href="@{/admin/newProduct}">New Product</a>
     </div>
     <table class="table">
@@ -23,7 +24,7 @@
             <td th:text="${p.name}"></td>
             <td th:text="${p.price}"></td>
             <td th:text="${p.quantity}">
-            <td >
+            <td sec:authorize="hasRole('ADMIN')">
                 <form method="post" th:action="@{/admin/delete(id=${p.id}">
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
